@@ -1,0 +1,19 @@
+<div class="comments">
+  <div class="pages">
+    <a class="page" href="">&lt;</a>
+    <a class="page" href="">1</a>
+    <a class="page active" href="">2</a>
+  </div>
+  <div class="paged_inner">
+
+    <div class="comment">
+      <div class="author">
+        <a href="" style="font-size: 17px">Racy<br/>
+        <div class="avatar"><img src="" width="64" height="64"></div>
+        </a>
+      </div>
+      <div class="text"> Awesome!!! But the reqoil is to much :/ </div>
+      <div class="meta"> <img src="images/time.png"> 5 days ago </div>
+    </div>
+  </div>
+</div>
