@@ -1,0 +1,10 @@
+  <?php $sys->details(); ?>
+</div>
+
+<script type="text/javascript">
+$(function()
+{
+  $(".use_tooltip").tooltip( { position: 'bottom center', predelay: 500 } ).dynamic();
+  $(".use_tooltip_top").tooltip( { position: 'top center', predelay: 500 } ).dynamic();
+});
+</script>
