@@ -1,6 +1,9 @@
 [v0.0.5 - 08/01/2011]
   - Page détails en place (Rating Stars pas encore configuré)
   - Rating Stars (Calcul) terminé
+  - Rating Stars (Vote) terminé
+  - Création de la liste des profs
+  - Mise en place du menu dynamique
 
 [v0.0.4 - 07/01/2011]
   - Changement du desgin (Optimisation)
